package com.Splitwise;

public class EqualSplit extends Split{
    EqualSplit(User user, int amount){
        super(user, amount);
    }
}
