package com.Splitwise;

public class Split {
    User user;
    int amount;

    Split(User user, int amount){
        this.user = user;
        this.amount = amount;
    }
}
