package com.Splitwise;

public class ExactSplit extends Split{
    ExactSplit(User user, int amount){
        super( user, amount);
    }
}
