package com.Splitwise;

public enum SplitType {
    EQUAL,
    EXACT,
    PERCENTAGE
}
