package com.Splitwise.enums;

public enum ExpenseType {
    EQUAL, EXACT, PERCENTAGE
}
